# parakeet-testing

./: .gitignore  README.md  checkOnnxVersion.py  export.py  inference.py  pyproject.toml  quantize.py  updateONNXVer.py
